--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,16 +1,16 @@
 [theme]
 
 # Primary accent for interactive elements
-primaryColor = '#E694FF'
-
-# Background color for the main content area
-backgroundColor = '#00172B'
-
-# Background color for sidebar and most interactive widgets
-secondaryBackgroundColor = '#0083B8'
+primaryColor = '#595959'
 
 # Color used for almost all text
-textColor = '#FFFFFF'
+textColor = '#1a1a1a'
+
+# Background color for the main content area
+backgroundColor = '#F8F0FB'
+
+# Background color for sidebar and most interactive widgets
+secondaryBackgroundColor = '#9CAF88'
 
 # Font family for all text in the app, except code blocks
 # Accepted values (serif | sans serif | monospace)
