--- a/requirements.txt
+++ b/requirements.txt
@@ -1,185 +1,60 @@
-﻿altair==5.0.1
-anyio==3.7.0
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asttokens==2.2.1
-async-lru==2.0.2
+altair==4.2.2
 attrs==23.1.0
-Babel==2.12.1
-backcall==0.2.0
-beautifulsoup4==4.12.2
-bleach==6.0.0
 blinker==1.6.2
-branca==0.6.0
-cachelib==0.9.0
 cachetools==5.3.1
-certifi==2023.5.7
-cffi==1.15.1
-charset-normalizer==3.1.0
-click==8.1.3
-click-plugins==1.1.1
-cligj==0.7.2
+certifi==2023.7.22
+charset-normalizer==3.2.0
+click==8.1.6
 colorama==0.4.6
-comm==0.1.3
-contourpy==1.1.0
-coverage==7.1.0
-cycler==0.11.0
-debugpy==1.6.7
 decorator==5.1.1
-defusedxml==0.7.1
 docopt==0.6.2
-et-xmlfile==1.1.0
-exceptiongroup==1.1.1
-executing==1.2.0
-fastjsonschema==2.17.1
-Fiona==1.9.4.post1
-Flask==2.2.2
-Flask-Caching==2.0.2
-folium==0.14.0
-fonttools==4.40.0
-fqdn==1.5.1
-geographiclib==2.0
-geopandas==0.13.2
-geopy==2.3.0
+entrypoints==0.4
 gitdb==4.0.10
-GitPython==3.1.31
-graphviz==0.20.1
-greenlet==2.0.2
-gunicorn==20.1.0
-htbuilder==0.6.1
+GitPython==3.1.32
 idna==3.4
-importlib-metadata==6.6.0
-iniconfig==2.0.0
-ipykernel==6.23.2
-ipython==8.14.0
-ipython-genutils==0.2.0
-ipywidgets==8.0.6
-isoduration==20.11.0
-itsdangerous==2.1.2
-jedi==0.18.2
+importlib-metadata==6.8.0
 Jinja2==3.1.2
-joblib==1.2.0
-json5==0.9.14
-jsonpointer==2.4
-jsonschema==4.17.3
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.6.3
-jupyter-lsp==2.2.0
-jupyter_client==8.2.0
-jupyter_core==5.3.1
-jupyter_server==2.6.0
-jupyter_server_terminals==0.4.4
-jupyterlab==4.0.2
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.7
-jupyterlab_server==2.23.0
-kiwisolver==1.4.4
+joblib==1.3.2
+jsonschema==4.19.0
+jsonschema-specifications==2023.7.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
-matplotlib==3.7.1
-matplotlib-inline==0.1.6
 mdurl==0.1.2
-mistune==2.0.5
-more-itertools==9.1.0
-nbclassic==1.0.0
-nbclient==0.8.0
-nbconvert==7.5.0
-nbformat==5.9.0
-nest-asyncio==1.5.6
-notebook==6.5.4
-notebook_shim==0.2.3
-numpy==1.24.3
-openpyxl==3.1.2
-overrides==7.3.1
+numpy==1.25.2
 packaging==23.1
-pandas==2.0.2
-pandocfilters==1.5.0
-parso==0.8.3
-patsy==0.5.3
-pdfkit==1.0.0
-pickleshare==0.7.5
+pandas==1.5.3
 Pillow==9.5.0
-pipreqs==0.4.11
-platformdirs==3.5.3
-plot==0.6.5
+pipreqs==0.4.13
 plotly==5.15.0
-plotly-express==0.4.1
-pluggy==1.0.0
-pprintpp==0.4.0
-prometheus-client==0.17.0
-prompt-toolkit==3.0.38
-protobuf==4.23.3
-psutil==5.9.5
-pure-eval==0.2.2
+protobuf==3.20.3
 pyarrow==12.0.1
-pycountry==22.3.5
-pycountry-convert==0.7.2
-pycparser==2.21
-pydeck==0.8.1b0
-Pygments==2.15.1
+pydeck==0.8.0
+Pygments==2.16.1
 Pympler==1.0.1
-PyMySQL==1.0.2
-pyparsing==3.0.9
-pyproj==3.6.0
-pyrsistent==0.19.3
-pytest==7.2.1
-pytest-cov==4.0.0
-pytest-mock==3.10.0
 python-dateutil==2.8.2
-python-decouple==3.8
-python-json-logger==2.0.7
 pytz==2023.3
 pytz-deprecation-shim==0.1.0.post0
-PyYAML==6.0
-pyzmq==25.1.0
-qtconsole==5.4.3
-QtPy==2.3.1
-repoze.lru==0.7
+referencing==0.30.2
 requests==2.31.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.4.2
-scikit-learn==1.2.2
-scipy==1.10.0
-seaborn==0.12.2
-Send2Trash==1.8.2
-shapely==2.0.1
+rich==13.5.2
+rpds-py==0.9.2
+scikit-learn==1.3.0
+scipy==1.11.2
+semver==3.0.1
 six==1.16.0
-sklearn==0.0.post5
 smmap==5.0.0
-sniffio==1.3.0
-soupsieve==2.4.1
-SQLAlchemy==1.4.46
-st-annotated-text==4.0.0
-stack-data==0.6.2
-statsmodels==0.13.5
-streamlit==1.23.1
-streamlit-aggrid==0.3.4.post3
-streamlit-folium==0.12.0
+streamlit==1.18.1
+streamlit-pandas==0.0.9
 tenacity==8.2.2
-terminado==0.17.1
-threadpoolctl==3.1.0
-tinycss2==1.2.1
+threadpoolctl==3.2.0
 toml==0.10.2
-tomli==2.0.1
 toolz==0.12.0
 tornado==6.3.2
-traitlets==5.9.0
-typing==3.7.4.3
-typing_extensions==4.6.3
+typing_extensions==4.7.1
 tzdata==2023.3
-tzlocal==4.3
-uri-template==1.2.0
-urllib3==2.0.3
+tzlocal==4.3.1
+urllib3==2.0.4
 validators==0.20.0
 watchdog==3.0.0
-wcwidth==0.2.6
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.6.0
-Werkzeug==2.2.2
-widgetsnbextension==4.0.7
 yarg==0.1.9
-zipp==3.15.0
+zipp==3.16.2
