--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,16 +1,16 @@
 [theme]
 
 # Primary accent for interactive elements
-primaryColor = '#393E46'
+primaryColor = '#005580'
 
 # Color used for almost all text
-textColor = '#1a1a1a'
+textColor = '#000000'
 
 # Background color for the main content area
-backgroundColor = '#F8F0FB'
+backgroundColor = '#f5ffff'
 
 # Background color for sidebar and most interactive widgets
-secondaryBackgroundColor = '#6D9886'
+secondaryBackgroundColor = '#36B9CC'
 
 # Font family for all text in the app, except code blocks
 # Accepted values (serif | sans serif | monospace)
